# maharajah

./: .gitignore  Cargo.toml  README.md
example/: Combinatorics.hs  Numerics.fs  algebra.scala  collections.cs  components.tsx  dom.js  geometry.kt  greet.go  math.rs  shapes.java  text.rb  utils.py  validation.ts
src/: cli.rs  config.rs  error.rs  main.rs
src/db/: schema.rs  store.rs
src/embed/: mod.rs  nomic.rs  ollama.rs  unixcoder.rs
src/indexer/: chunker.rs  mod.rs  parser.rs  parser_tests.rs  walker.rs
src/rag/: mod.rs  pipeline.rs  retriever.rs
src/server/: embedder_actor.rs  handlers.rs  mod.rs  watcher.rs
