[package]
name = "maharajah"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# CLI argument parsing (derive style)
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration (TOML file + env var layering)
figment = { version = "0.10", features = ["toml", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UniXcoder embeddings (Candle — pure Rust, no Python)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.5"
ureq = "2"

# Vector database
lancedb = "0.26"

# Arrow types — must match lancedb's pinned version
arrow-array = "57"
arrow-schema = "57"

# Source code parsing
tree-sitter = "0.26"
tree-sitter-rust       = "0.24"
tree-sitter-python     = "0.25"
tree-sitter-java       = "0.23"
tree-sitter-c-sharp    = "0.23"
tree-sitter-scala      = "0.24"
tree-sitter-haskell    = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go         = "0.25"
tree-sitter-ruby       = "0.23"
tree-sitter-fsharp     = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
sha2 = "0.10"
futures = "0.3"
glob = "0.3"
